integration-tests/tests/errors/templates/js-syntax-error.ejs
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="UTF-8">
	<title>Errors test</title>
  <%- renderAgent({bufferTimeout: 1}) %>
  <script>
    var abc=;
  </script>
</head>
<body>
</body>
</html>
